<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MartianLander</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="up">Up</string>
    <string name="score">Score</string>
    <string name="totalScore">totalScore</string>
    <string name="fuel">Fuel</string>
    <string name="fuelLeft">fuelLeft</string>
    <string name="spaceCx">spaceCx</string>
    <string name="cx">cx</string>
    <string name="spaceCy">spaceCy</string>
    <string name="cy">cy</string>
    <string name="refresh">refresh</string>
    <string name="exit">exit</string>

</resources>
